...

            </LinearLayout>
        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_noteList_newNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add_white_24dp"/>

...
